# Solar-system-OpenGL

./: .gitignore  CMakeLists.txt  README.md
SolarSystem/: main.cpp  obj_loader.h  shader.cpp  shader.h
SolarSystem/include/: camera.h  shader.h  solar_system.h
SolarSystem/src/: camera.cpp  main.cpp  shader.cpp  solar_system.cpp
